src/mainPackage/MainGrammar.java
/* Generated By:JavaCC: Do not edit this line. MainGrammar.java */
package mainPackage;
import NodePackage.*;
import priority.*;
import utils.*;

public class MainGrammar implements MainGrammarConstants {
  public static void main(String args []) throws ParseException, java.io.FileNotFoundException
  {
    MainGrammar parser = new MainGrammar(
    new java.io.FileInputStream("src/test2 switch")
    );
    AbstractTreeNode n = start();
    TreePrinter.print(n);
    if (n.execute(new Context()) instanceof JumpStmt)
    throw new RuntimeException("encountered jump statement outside loops or switch");
    // printer.print();
  }

  static int space = 0;

  public static void print(String x)
  {
    String out = "";
    for (int i = 0; i < space; i++)
    out += " ";
    System.out.println(out + x);
  }

  public static void inc()
  {
    space += 3;
  }

  public static void dec()
  {
    space -= 3;
  }

  static final public BlockNode start() throws ParseException {
  BlockNode n = new BlockNode();
  AbstractTreeNode c;
    print("Start");
    label_1:
    while (true) {
      c = stmt();
      n.addChild(c);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case If:
      case FOR:
      case WHILE:
      case DO:
      case SWITCH:
      case BREAK:
      case CONTINUE:
      case CIN:
      case COUT:
      case Id:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
    System.out.println("Tree was built successfully!");
    print("end");
    {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public AbstractTreeNode stmt() throws ParseException {
  AbstractTreeNode n;
    inc();
    print("start stmt");
    if (jj_2_1(2)) {
      n = assignSequence();
      jj_consume_token(Semicolon);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case Id:
        n = declarationStmt();
        jj_consume_token(Semicolon);
        break;
      case If:
        n = ifStmt();
        break;
      case WHILE:
        n = whileStmt();
        break;
      case DO:
        n = doWhileStmt();
        break;
      case SWITCH:
        n = switchStmt();
        break;
      case BREAK:
      case CONTINUE:
        n = jumpStmt();
        break;
      case FOR:
        n = forStmt();
        break;
      case CIN:
        n = CinStmt();
        break;
      case COUT:
        n = CoutStmt();
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    print("end stmt");
    dec();
    {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public BlockNode block() throws ParseException {
  BlockNode res = new BlockNode();
  AbstractTreeNode statement;
    print("start block");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LeftBrace:
      jj_consume_token(LeftBrace);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case If:
        case FOR:
        case WHILE:
        case DO:
        case SWITCH:
        case BREAK:
        case CONTINUE:
        case CIN:
        case COUT:
        case Id:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        statement = stmt();
          res.addChild(statement);
      }
      jj_consume_token(RightBrace);
      break;
    case If:
    case FOR:
    case WHILE:
    case DO:
    case SWITCH:
    case BREAK:
    case CONTINUE:
    case CIN:
    case COUT:
    case Id:
      statement = stmt();
      res.addChild(statement);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    print("end block");
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public CoutNode CoutStmt() throws ParseException {
  CoutNode res = new CoutNode();
  AbstractTreeNode output = null;
    print("start CoutStmt");
    inc();
    jj_consume_token(COUT);
    label_3:
    while (true) {
      jj_consume_token(OUTPUTBRACE);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOUBLE_VALUE:
      case BOOLEAN_VALUE:
      case STR:
      case CHAR_VALUE:
      case PLUS:
      case MINUS:
      case NOT:
      case Id:
        output = expression();
        break;
      case ENDLINE:
        jj_consume_token(ENDLINE);
          output = new EndlNode();
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
        res.addChild(output);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OUTPUTBRACE:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_3;
      }
    }
    jj_consume_token(Semicolon);
    print("end CoutStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public CinNode CinStmt() throws ParseException {
  CinNode res = new CinNode();
  Token t;
    print("start CinStmt");
    inc();
    jj_consume_token(CIN);
    label_4:
    while (true) {
      jj_consume_token(INPUTBRACE);
      t = jj_consume_token(Id);
        res.vars.add(t.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INPUTBRACE:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
    }
    jj_consume_token(Semicolon);
    print("end CinStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public IfNode ifStmt() throws ParseException {
  IfNode res = new IfNode();
  AbstractTreeNode n, nn;
    print("start ifStmt");
    inc();
    jj_consume_token(If);
    jj_consume_token(LeftParenthesis);
    n = expression();
    jj_consume_token(RightParenthesis);
    nn = block();
      res.addChild(n);
      res.addChild(nn);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Else:
      jj_consume_token(Else);
      nn = block();
        res.addChild(nn);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    print("end ifStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public WhileNode whileStmt() throws ParseException {
  WhileNode res = new WhileNode();
  AbstractTreeNode cond, bl;
    inc();
    print("start whileStmt");
    jj_consume_token(WHILE);
    jj_consume_token(LeftParenthesis);
    cond = expression();
    jj_consume_token(RightParenthesis);
    bl = block();
    res.addChild(cond);
    res.addChild(bl);
    print("end whileStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public DoWhileNode doWhileStmt() throws ParseException {
  DoWhileNode res = new DoWhileNode();
  AbstractTreeNode cond, block;
    inc();
    print("start doWhileStmt");
    jj_consume_token(DO);
    block = block();
    jj_consume_token(WHILE);
    jj_consume_token(LeftParenthesis);
    cond = expression();
    jj_consume_token(RightParenthesis);
    jj_consume_token(Semicolon);
    res.addChild(block);
    res.addChild(cond);
    print("end doWhileStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public ForNode forStmt() throws ParseException {
  ForNode res = new ForNode();
  AbstractTreeNode cond = null, bl, ass1 = null, ass2 = null;
    inc();
    print("start forStmt");
    jj_consume_token(FOR);
    jj_consume_token(LeftParenthesis);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      if (jj_2_2(2)) {
        ass1 = assignSequence();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Id:
          ass1 = declarationStmt();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(Semicolon);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOUBLE_VALUE:
    case BOOLEAN_VALUE:
    case STR:
    case CHAR_VALUE:
    case PLUS:
    case MINUS:
    case NOT:
    case Id:
      cond = expression();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(Semicolon);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case Id:
      ass2 = assignSequence();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(RightParenthesis);
    bl = block();
    if (ass1 == null)
    ass1 = new EmptyNode();
    if (cond == null)
    cond = new EmptyNode();
    if (ass2 == null)
    ass2 = new EmptyNode();
    res.addChild(ass1);
    res.addChild(cond);
    res.addChild(ass2);
    res.addChild(bl);
    print("end forStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public BlockNode blockwithout() throws ParseException {
  BlockNode res = new BlockNode();
  AbstractTreeNode statement;
    print("start blockwithout");
    inc();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case If:
    case FOR:
    case WHILE:
    case DO:
    case SWITCH:
    case BREAK:
    case CONTINUE:
    case CIN:
    case COUT:
    case Id:
      label_5:
      while (true) {
        statement = stmt();
        res.addChild(statement);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case If:
        case FOR:
        case WHILE:
        case DO:
        case SWITCH:
        case BREAK:
        case CONTINUE:
        case CIN:
        case COUT:
        case Id:
          ;
          break;
        default:
          jj_la1[12] = jj_gen;
          break label_5;
        }
      }
      break;
    case LeftBrace:
      jj_consume_token(LeftBrace);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case If:
        case FOR:
        case WHILE:
        case DO:
        case SWITCH:
        case BREAK:
        case CONTINUE:
        case CIN:
        case COUT:
        case Id:
          ;
          break;
        default:
          jj_la1[13] = jj_gen;
          break label_6;
        }
        statement = stmt();
          res.addChild(statement);
      }
      jj_consume_token(RightBrace);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    print("end blockwithout");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public SwitchNode switchStmt() throws ParseException {
  SwitchNode res = new SwitchNode();
  AbstractTreeNode ns, nns, nnns;
    print("start switchStmt");
    inc();
    nns = new CaseNode();
    nnns = new DefaultNode();
    jj_consume_token(SWITCH);
    jj_consume_token(LeftParenthesis);
    ns = expression();
    jj_consume_token(RightParenthesis);
    jj_consume_token(LeftBrace);
    res.addChild(ns);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CASE:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_7;
      }
      nns = caseStmt();
        res.addChild(nns);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DEF:
      nnns = defaultStmt();
        res.addChild(nnns);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CASE:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_8;
      }
      nns = caseStmt();
        res.addChild(nns);
    }
    jj_consume_token(RightBrace);
    print("end switchStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public CaseNode caseStmt() throws ParseException {
  CaseNode res = new CaseNode();
  AbstractTreeNode nc, nnc;
  nc = null;
  nnc = null;
    print("start caseStmt");
    inc();
    jj_consume_token(CASE);
    nc = expression();
    jj_consume_token(TP);
    res.addChild(nc);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case If:
    case FOR:
    case WHILE:
    case DO:
    case SWITCH:
    case BREAK:
    case CONTINUE:
    case LeftBrace:
    case CIN:
    case COUT:
    case Id:
      nnc = blockwithout();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    res.addChild(nnc);
    print("end caseStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public DefaultNode defaultStmt() throws ParseException {
  DefaultNode res = new DefaultNode();
  AbstractTreeNode nd;
  nd = null;
    print("start defaultStmt");
    inc();
    jj_consume_token(DEF);
    jj_consume_token(TP);
    nd = blockwithout();
      res.addChild(nd);
    print("end defaultStmt");
    dec();
    {if (true) return res;}
    throw new Error("Missing return statement in function");
  }

  static final public JumpStmtNode jumpStmt() throws ParseException {
  Token t = null;
    inc();
    print("start jumpStmt");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BREAK:
      t = jj_consume_token(BREAK);
      break;
    case CONTINUE:
      t = jj_consume_token(CONTINUE);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(Semicolon);
    JumpStmtNode out = new JumpStmtNode(JumpStmt.valueOf(t.image.toUpperCase()));
    print("end jumpStmt");
    dec();
    {if (true) return out;}
    throw new Error("Missing return statement in function");
  }

  static final public BlockNode assignSequence() throws ParseException {
  BlockNode block = new BlockNode();
  AssignNode assign = null;
    inc();
    print("start assignSequence");
    assign = assignStmt();
    block.addChild(assign);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMA:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_9;
      }
      jj_consume_token(COMA);
      assign = assignStmt();
      block.addChild(assign);
    }
    print("end assignSequence");
    dec();
    {if (true) return block;}
    throw new Error("Missing return statement in function");
  }

  static final public AssignNode assignStmt() throws ParseException {
  Token t, op;
  AssignNode anode = new AssignNode();
  AbstractTreeNode n;
    inc();
    print("start assignStmt");
    t = jj_consume_token(Id);
    op = jj_consume_token(Assignment);
    n = expression();
    anode.setVar(t.image);
    anode.setOperator(op.image);
    anode.addChild(n);
    print("end assignStmt");
    dec();
    {if (true) return anode;}
    throw new Error("Missing return statement in function");
  }

  static final public ConstantNode constant() throws ParseException {
  ConstantNode cn = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STR:
      cn = strConstant();
      break;
    case CHAR_VALUE:
      cn = charConstant();
      break;
    case DOUBLE_VALUE:
      cn = doubleConstant();
      break;
    case BOOLEAN_VALUE:
      cn = boolConstant();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return cn;}
    throw new Error("Missing return statement in function");
  }

  static final public ConstantNode doubleConstant() throws ParseException {
  Token t1;
  ConstantNode cn = new ConstantNode();
    t1 = jj_consume_token(DOUBLE_VALUE);
    print("constant double ");
    cn.setValue(new Value("double", Double.parseDouble(t1.image)));
    {if (true) return cn;}
    throw new Error("Missing return statement in function");
  }

  static final public ConstantNode charConstant() throws ParseException {
  Token t1;
  ConstantNode cn = new ConstantNode();
    t1 = jj_consume_token(CHAR_VALUE);
    print("constant char ");
    cn.setValue(new Value("char", t1.image.charAt(1)));
    {if (true) return cn;}
    throw new Error("Missing return statement in function");
  }

  static final public ConstantNode boolConstant() throws ParseException {
  Token t1;
  ConstantNode cn = new ConstantNode();
    t1 = jj_consume_token(BOOLEAN_VALUE);
    print("constant bool");
    cn.setValue(new Value("bool", t1.image.equals("true")));
    {if (true) return cn;}
    throw new Error("Missing return statement in function");
  }

  static final public ConstantNode strConstant() throws ParseException {
  Token t1;
  ConstantNode cn = new ConstantNode();
    t1 = jj_consume_token(STR);
    int start = 1, end = t1.image.length() - 1;
    String value = t1.image.substring(start, end);
    print("constant string ");
    cn.setValue(new Value("string", value));
    {if (true) return cn;}
    throw new Error("Missing return statement in function");
  }

  static final public VariableNode var() throws ParseException {
  Token t1;
    t1 = jj_consume_token(Id);
    VariableNode cn = new VariableNode();
    cn.setValue(t1.image);
    print("variableNode node " + t1.image);
    {if (true) return cn;}
    throw new Error("Missing return statement in function");
  }

  static final public AbstractTreeNode zero_priority() throws ParseException {
  AbstractTreeNode res;
  UnaryNode unary = null;
  Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
    case MINUS:
    case NOT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
        t = jj_consume_token(MINUS);
        break;
      case PLUS:
        t = jj_consume_token(PLUS);
        break;
      case NOT:
        t = jj_consume_token(NOT);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      unary = new UnaryNode();
      unary.setOperator(t.image);
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOUBLE_VALUE:
    case BOOLEAN_VALUE:
    case STR:
    case CHAR_VALUE:
      res = constant();
      break;
    case Id:
      res = var();
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (unary != null)
    unary.addChild(res);
    {if (true) return unary == null ? res : unary;}
    throw new Error("Missing return statement in function");
  }
